# 2_cemestr

1laba/: 2sem_laba2.cpp  CMakeLists.txt  func.cpp  func.hpp
Python/: Laba4.py  Parfenov_1laba.py  Pascal_Parfenov.py  Serpinsky_Parfenov.py  laba3.py
Python/10laba/: 10Laba.py
Python/5laba_1/: Beton5_1.py
Python/5laba_2/: Beton5_2.py  input2.txt
Python/5laba_3/: Beton5_3.py  input3.txt  output.oldest3.txt  output_youngest3.txt
Python/5laba_4/: laba5_4.py
Python/9Laba/: 1.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py
Python/Titanic/: Titanic.py
Python/Titanic/workdata/Learning/: train.csv
Python/Titanic/workdata/Testing/: test.csv
laba1/: 2sem_laba2.cpp  CMakeLists.txt  func.cpp  func.hpp
laba2/: CMakeLists.txt  sem2_laba2.cpp
laba3/: CMakeLists.txt  Sem2_Laba3.cpp
laba4/: CMakeLists.txt  sem2_laba4_new.cpp
laba5/: CMakeLists.txt  sem2_laba5.cpp
laba7/: CMakeLists.txt  Nasledovanie.cpp  input3.binf
laba8/: Bongobongo.cpp  CMakeLists.txt
